--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Nabeel V || Resume</title>
+    <title>Nabeel V</title>
   </head>
 
   <body>
